<resources>
    <string name="app_name">Profy</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="ring_level">Ring Level</string>
    <string name="ring_mode">Ring Mode</string>
    <string name="call_level">Call Level</string>
    <string name="music_level">Music Level</string>
    <string name="system_level">System Level</string>
    <string name="notification_level">Notification Level</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="alarm_level">Alarm Level</string>
    <string name="silent">Silent</string>
    <string name="vibration_only">Vibration Only</string>
    <string name="normal">Normal</string>
    <string name="profile_name">Profile Name</string>
    <string name="audio_profile">Audio Profile</string>
    <string name="apply">Apply</string>
    <string name="display_profile">Display Profile</string>
    <string name="time_10sec">10 Sec</string>
    <string name="time_30sec">30 Sec</string>
    <string name="time_1min">1 Min</string>
    <string name="time_2min">2 Min</string>
    <string name="time_5min">5 Min</string>
    <string name="time_10min">10 Min</string>
    <string name="time_never">Never</string>
    <string name="auto_brightness">Auto Brightness</string>
    <string name="auto_rotate">Auto Rotate</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_level">Brightness Level</string>
    <string name="sleep_after">Sleep After</string>
    <string name="err_invalid_profile_name">Invalid profile name!</string>
    <string name="profile_trigger">Profile Trigger</string>
    <string name="select_trigger_type">Select Trigger Type</string>
    <string name="trigger_type_time">Time</string>
    <string name="trigger_type_bluetooth">Bluetooth</string>
    <string name="trigger_type_wifi">WiFi</string>
    <string name="trigger_type_geo">Geo Location</string>
    <string name="trigger_type_url">Url (QR code, NFC tag…etc)</string>
    <string name="msg_unavailable_in_this_version">Unavailable in this version</string>
    <string name="week_days">Week Days</string>
    <string name="letter_sunday">S</string>
    <string name="letter_monday">M</string>
    <string name="letter_tuesday">T</string>
    <string name="letter_wednesday">W</string>
    <string name="letter_thursday">T</string>
    <string name="letter_friday">F</string>
    <string name="letter_saturday">S</string>

</resources>
