<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.rageh.profy.presentation.ui.audio.AudioProfileViewModel" />

        <import type="com.rageh.profy.util.binder.EditTextValidator" />

        <import type="android.media.AudioManager" />

        <import type="android.view.View" />

        <variable
                name="vm"
                type="AudioProfileViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:context=".presentation.ui.audio.AudioProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:padding="@dimen/default_screen_padding">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:editTextValidationErrorMessage="@{@string/err_invalid_profile_name}"
                    app:editTextValidationType="@{EditTextValidator.TYPE_FULL_NAME}"
                    tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@={vm.currentAudioProfile.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/ring_mode_lbl_tv"
                    style="@style/field_lbl_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/ring_mode"
                    tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/ringModeSp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/ring_modes"
                    android:selectedItemPosition="@={vm.liveRingerMode}"
                    tools:ignore="MissingConstraints" />

            <TextView
                    android:id="@+id/ring_level_lbl_tv"
                    style="@style/field_lbl_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/ring_level"
                    android:visibility="@{vm.liveRingerMode == AudioManager.RINGER_MODE_NORMAL ? View.VISIBLE:View.GONE}"
                    tools:ignore="MissingConstraints" />

            <SeekBar
                    android:id="@+id/ringLevelSB"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="@{vm.maxLevelProfile.ringLevel}"
                    android:progress="@={vm.currentAudioProfile.ringLevel}"
                    android:visibility="@{vm.liveRingerMode == AudioManager.RINGER_MODE_NORMAL ? View.VISIBLE:View.GONE}"
                    tools:ignore="MissingConstraints"
                    tools:max="10"
                    tools:progress="4" />

            <TextView
                    android:id="@+id/call_level_lbl_tv"
                    style="@style/field_lbl_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/call_level"
                    tools:ignore="MissingConstraints" />

            <SeekBar
                    android:id="@+id/callLevelSB"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="@{vm.maxLevelProfile.callLevel}"
                    android:progress="@={vm.currentAudioProfile.callLevel}"
                    tools:ignore="MissingConstraints"
                    tools:max="10"
                    tools:progress="5" />

            <TextView
                    android:id="@+id/music_level_lbl_tv"
                    style="@style/field_lbl_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/music_level"
                    android:visibility="@{vm.liveRingerMode == AudioManager.RINGER_MODE_NORMAL ? View.VISIBLE:View.GONE}"
                    tools:ignore="MissingConstraints" />

            <SeekBar
                    android:id="@+id/musicLevelSB"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="@{vm.maxLevelProfile.musicLevel}"
                    android:progress="@={vm.currentAudioProfile.musicLevel}"
                    android:visibility="@{vm.liveRingerMode == AudioManager.RINGER_MODE_NORMAL ? View.VISIBLE:View.GONE}"
                    tools:ignore="MissingConstraints"
                    tools:max="10"
                    tools:progress="3" />

            <TextView
                    android:id="@+id/system_level_lbl_tv"
                    style="@style/field_lbl_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/system_level"
                    android:visibility="@{vm.liveRingerMode == AudioManager.RINGER_MODE_NORMAL ? View.VISIBLE:View.GONE}"
                    tools:ignore="MissingConstraints" />

            <SeekBar
                    android:id="@+id/systemLevelSB"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="@{vm.maxLevelProfile.systemLevel}"
                    android:progress="@={vm.currentAudioProfile.systemLevel}"
                    android:visibility="@{vm.liveRingerMode == AudioManager.RINGER_MODE_NORMAL ? View.VISIBLE:View.GONE}"
                    tools:ignore="MissingConstraints"
                    tools:max="10"
                    tools:progress="4" />

            <TextView
                    android:id="@+id/alarm_level_lbl_tv"
                    style="@style/field_lbl_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/alarm_level"
                    tools:ignore="MissingConstraints" />

            <SeekBar
                    android:id="@+id/alarmLevelSB"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="@{vm.maxLevelProfile.alarmLevel}"
                    android:progress="@={vm.currentAudioProfile.alarmLevel}"
                    tools:ignore="MissingConstraints"
                    tools:max="10"
                    tools:progress="4" />

            <TextView
                    android:id="@+id/notification_level_lbl_tv"
                    style="@style/field_lbl_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/notification_level"
                    android:visibility="@{vm.liveRingerMode == AudioManager.RINGER_MODE_NORMAL ? View.VISIBLE:View.GONE}"
                    tools:ignore="MissingConstraints" />

            <SeekBar
                    android:id="@+id/notificationLevelSB"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="@{vm.maxLevelProfile.notificationLevel}"
                    android:progress="@={vm.currentAudioProfile.notificationLevel}"
                    android:visibility="@{vm.liveRingerMode == AudioManager.RINGER_MODE_NORMAL ? View.VISIBLE:View.GONE}"
                    tools:ignore="MissingConstraints"
                    tools:max="10"
                    tools:progress="6" />


            <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/flow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:constraint_referenced_ids="nameIL,
                ring_mode_lbl_tv,ringModeSp,alarm_level_lbl_tv,alarmLevelSB,
                call_level_lbl_tv,callLevelSB,ring_level_lbl_tv,ringLevelSB,
                music_level_lbl_tv,musicLevelSB,system_level_lbl_tv,systemLevelSB,
                notification_level_lbl_tv,notificationLevelSB"
                    app:flow_horizontalAlign="start"
                    app:flow_verticalBias="0"
                    app:flow_verticalGap="12dp"
                    app:flow_verticalStyle="packed"
                    tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>